examples/test/testpolicy6068.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6068
  namespace: namespace171
spec:
  podSelector:
    matchLabels:
      key28: value46
      key3: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value21
      podSelector:
        matchLabels:
          key0: value2
          key18: value38
